fix for java8